# python_library_examples

./: CLAUDE.md  README.md  TODO.md  conf.py  index.rst  main.py  pyproject.toml  ssh_task.py
PuLP/: README.rst  magic_square.py
beautiful_soup/: README.rst
curses/: README.md  README.rst  pac.py
email/: README.rst  send_email.py
flask/: README.rst
folium/: README.rst
httpx/: README.rst  example_requests.py  search_with_parameters.py
itertools/: README.rst  example_itertools.py
json/: README.rst
math/: README.rst
matplotlib/: README.rst  errorbars.py  piechart.py
moviepy/: end_credits.py
networkx/: README.rst  page_rank.py
numpy/: README.rst  gauss_elim.py
os/: README.rst
pandas/: README.rst  hexpanda.py
paramiko/: ssh_task.py
pillow/: README.rst  dice.py  half_size.py  snowflake.py
playwright/: README.rst
psycopg2/: crud.py  docker-compose.yml
pydocx/: README.rst  read_word_doc.py
pygraphviz/: alpakas.gv  alpakas.py
pymongo/: README.rst  pymongo_connect.py
pypdf/: README.rst  merge.py  merge_images.py
pypdf2/: README.rst  merge.py
random/: README.rst  example_random.py  random_list.rst  random_order.py  random_set.py
re/: README.rst  fox.py  phone.py
scipy/: README.rst  curve_fit.py
sklearn/: README.rst  example_sklearn.py
sqlite3/: README.rst  example_sqlite.py
streamlit/: pingu_streamlit.py
sys/: README.rst
thefuzz/: README.rst  fuzzy_search.py
time/: README.rst
tkinter/: README.rst  titanic.py
tqdm/: README.rst
vader/: README.rst  vader.py
wordcloud/: README.rst  create_wordcloud.py
(+4 files in other folders)
