[project]
name = "python-library-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "furo>=2025.7.19",
    "httpx>=0.28.1",
    "myst-parser>=4.0.1",
    "openpyxl>=3.1.5",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "vadersentiment>=3.3.2",
    "windows-curses>=2.4.1",
    "xlrd>=2.0.2",
]
